force-app/main/default/objects/Feature_Toggle__mdt/Feature_Toggle__mdt.object-meta.xml
<CustomObject>
    <label>Feature Toggle</label>
    <pluralLabel>Feature Toggles</pluralLabel>
</CustomObject>