force-app/main/default/objects/Feature_Toggle__mdt/fields/Feature_Code__c.field-meta.xml
<CustomField>
    <fullName>Feature_Code__c</fullName>
    <label>Feature Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>