force-app/main/default/objects/Feature_Toggle__mdt/fields/Package_Tier__c.field-meta.xml
<CustomField>
    <fullName>Package_Tier__c</fullName>
    <label>Package Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>